fixed contact display on mobile

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -18,6 +18,15 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        @include mobile{
+            height: 100px;
+            width: 500px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 300px;
+        }
         
 
         .contact-info{
@@ -38,7 +47,6 @@
                 background: #081d49;
                 border-radius: 10%;
                 padding: 0 20px;
-                margin: 0 10px;
                 width: calc(33% - 20px);
                 height: 150px;
                 display: flex;
@@ -51,6 +59,8 @@
 
                 @include mobile{
                     height: 100px;
+                    border-radius: 0%;
+                    padding: 0 0;
                 }
 
                 p{
